# mafia2de-multiplayer

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: README.md  pair-launcher.ahk
client/: Cargo.toml  build.rs
client/src/: camera_state.rs  debug_commands.rs  events.rs  hooks.rs  human_messages.rs  input.rs  lib.rs  lua_queue.rs  main_thread.rs  monitor.rs  multiplayer.rs  multiplayer_test.rs  net_debug.rs  network.rs  player_events.rs  player_tracker.rs  remote_players.rs  runtime.rs  single_instance_bypass.rs  state.rs  utils.rs  vehicle_tracker.rs
client/src/overlay/: d3d11_state.rs  demo.rs  egui_input.rs  input.rs  input_lock.rs  mod.rs  multiplayer_demo.rs  multiplayer_ui.rs  state.rs  state_backup.rs  theme.rs  ui_new.rs
client/src/overlay/ui/: chat.rs  connect.rs  console.rs  cursor.rs  hud.rs  mod.rs  notifications.rs  player_list.rs  scoreboard.rs
common/: Cargo.toml
common/src/: logger.rs
devtools/: Cargo.toml
devtools/src/: events.rs  hooks.rs  input.rs  lib.rs  lua_queue.rs  main_thread.rs  runtime.rs  state.rs
devtools/src/commands/: camera.rs  entity.rs  health.rs  mod.rs  player.rs  vehicle.rs  world.rs
devtools/src/tools/: camera_state.rs  mod.rs  monitor.rs  noclip.rs  player_probe.rs
launcher/: Cargo.toml
launcher/src/: error.rs  game_path.rs  inject.rs  main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
sdk/: Cargo.toml
sdk/examples/: basic_usage.rs
sdk/src/: free_raid.rs  game.rs  globals.rs  lib.rs  macros.rs  memory.rs  object_list.rs  patterns.rs  physical_processor.rs  resource_manager.rs  translocator.rs  types.rs
sdk/src/addresses/: constants.rs  data.rs  fields.rs  functions.rs  globals.rs  mod.rs  sigs.rs  strings.rs  vtables.rs
sdk/src/game/: application.rs  c_sys_input.rs  callbacks.rs  camera.rs  car.rs  entity.rs  entity_ref.rs  entity_types.rs  game_input_module.rs  hash.rs  lua.rs  manager.rs  mission.rs  mod.rs  npc.rs  player.rs  police.rs  render.rs  script_entity.rs  sds.rs  world.rs
sdk/src/game/player/: appearance.rs  controls.rs  debug.rs  health.rs  mod.rs  money.rs  movement.rs  state.rs  vehicle.rs  weapons.rs
sdk/src/structures/: actors_pack.rs  application.rs  c_sys_input.rs  callbacks.rs  car.rs  core.rs  entity.rs  entity_hash_table.rs  game_input_module.rs  game_world.rs  garage.rs  inventory.rs  messages.rs  mission.rs  mod.rs  player.rs  police_script_owner.rs  render.rs  script_entity.rs  std_vector.rs  tables.rs  vehicle.rs  vtables.rs
sdk/src/structures/entities/: ai.rs  car.rs  entity.rs  human_components.rs  human_inventory.rs  human_messages.rs  inventory_components.rs  mod.rs  player.rs
sdk/src/structures/vtables/: actors_pack.rs  application.rs  c_sys_input.rs  car.rs  game_input_module.rs  game_manager.rs  mission.rs  mod.rs  player.rs
sdk/src/structures/vtables/entities/: ai.rs  car.rs  inventory.rs  mod.rs  player.rs
server/: Cargo.toml
server/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
