[workspace]
members = [
    "common",
    "sdk",
    "protocol",
    "client",
    "launcher",
    "server",
    "devtools",
    "xtask",
]
default-members = [
    "common",
    "sdk",
    "protocol",
    "client",
    "launcher",
    "server",
    "devtools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
windows = { version = "0.62.2" }
chrono = "0.4.44"
minhook = "0.9.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

common   = { path = "common" }
sdk      = { path = "sdk" }
protocol = { path = "protocol" }
