[package]
name = "client"
version.workspace = true
edition.workspace = true

[lib]
name = "m2mp_client"
crate-type = ["cdylib"]

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
]}
common = { workspace = true }
sdk    = { workspace = true }
minhook = "0.9.0"
