[package]
name = "client"
version.workspace = true
edition.workspace = true

[lib]
name = "m2mp_client"
crate-type = ["cdylib"]

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
]}
common = { workspace = true }
sdk    = { workspace = true }
slint  = { workspace = true }
minhook = { workspace = true }

[build-dependencies]
slint-build = "1.15.1"
