[package]
name = "client"
version.workspace = true
edition.workspace = true

[lib]
name = "m2mp_client"
crate-type = ["cdylib"]

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
]}
common   = { workspace = true }
sdk      = { workspace = true }
protocol = { workspace = true }
minhook  = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

egui = { version = "0.33.3", default-features = false }
egui-directx11 = "0.12.1"
