[package]
name = "launcher"
version.workspace = true
edition.workspace = true

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_Dialogs",
]}
common = { workspace = true }