[package]
name = "mafia2de_sdk"
version = "0.1.0"
edition = "2024"
description = "SDK для Mafia II Definitive Edition"

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]}
common = { path = "../common" }
