[package]
name = "sdk"
version.workspace = true
edition.workspace = true
description = "Game SDK for Mafia II: Definitive Edition — memory tools, patterns, addresses"

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
]}
common = { workspace = true }